adding log file env var on .service file

--- a/email_on_start.service
+++ b/email_on_start.service
@@ -5,6 +5,7 @@ Description=Simple script that emails me when server restarts
 Environment="EMAIL_USER="
 Environment="EMAIL_PASSWD="
 Environment="DEST_EMAIL="
+Environment="EMAIL_LOG_FILE="
 WorkingDirectory=/home/ria/email-on-start
 ExecStart=/usr/bin/python /home/ria/email-on-start/emailstart.py
 ExecStop=/usr/bin/whoami
